# ivst

./: .gitignore  plan.md
prog/: REFERENCE.md  plan.md  pyproject.toml
prog/data/: ivst.db
prog/src/ivst/: __main__.py  app.py  config.py
prog/src/ivst/analysis/: discovery.py  market_adapters.py  recommend.py  stock_adapters.py
prog/src/ivst/commands/: dashboard.py  market.py  portfolio.py  recommend_cmd.py
prog/src/ivst/data/: fx.py  macro.py  resolver.py  sentiment_index.py  us_stock.py
prog/src/ivst/db/: engine.py  models.py
prog/src/ivst/ui/: colors.py  formatters.py
prog/tests/: test_market_adapters.py  test_stock_adapters.py  test_stock_aggregate.py
prompt/: PLAN.md  README.md
prompt/prompts/: macro-liquidity.md  stock-analysis.md
src/ivst/: __init__.py
src/ivst/analysis/: indicators.py  market.py  market_service.py  recommend.py  sentiment.py  signal.py  stock.py  stock_service.py
src/ivst/commands/: market.py  news_cmd.py  note.py  signal_cmd.py  watch.py
src/ivst/data/: __init__.py  kr_stock.py  news.py
src/ivst/db/: engine.py  repo.py
src/ivst/ui/: panels.py
tests/: test_market_aggregate.py
