[project]
name = "ivst"
version = "0.1.0"
description = "Automated Investment Analysis Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pykrx>=1.0",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "feedparser>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "finance-datareader>=0.9.110",
]

[project.scripts]
ivst = "ivst.app:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]
